tests/ui/basic/range_non_integer.rs
use metamatch::eval;

fn main() {
    eval! {
        "foo"..10
    };
}
